SQOOP-2696: Sqoop2: Doc: Select final theme for the docs  (Jarek Jarcec Cecho via Kate Ting)

--- a/pom.xml
+++ b/pom.xml
@@ -756,6 +756,7 @@ limitations under the License.
               <exclude>patch-process/*</exclude>
               <exclude>.metadata/</exclude>
               <exclude>**/target/*</exclude>
+              <exclude>src/site/sphinx/_themes/**</exclude>
             </excludes>
           </configuration>
         </plugin>
