--- a/server/pom.xml
+++ b/server/pom.xml
@@ -22,7 +22,7 @@ limitations under the License.
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.apache</groupId>
+        <groupId>com.stratio.sqoop</groupId>
         <artifactId>sqoop</artifactId>
         <version>2.0.0-SNAPSHOT</version>
     </parent>
@@ -168,25 +168,123 @@ limitations under the License.
 
     <profiles>
         <profile>
-            <id>binary</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
+            <id>package</id>
             <build>
                 <plugins>
                     <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-dependency-plugin</artifactId>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>appassembler-maven-plugin</artifactId>
+                        <version>1.10</version>
+                        <configuration>
+                            <platforms>
+                                <platform>unix</platform>
+                            </platforms>
+                            <configurationDirectory>config</configurationDirectory>
+                            <copyConfigurationDirectory>true</copyConfigurationDirectory>
+                            <includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
+                            <assembleDirectory>target/appassembler</assembleDirectory>
+                            <programs>
+                                <program>
+                                    <mainClass>org.apache.sqoop.server.SqoopJettyServer</mainClass>
+                                    <name>server</name>
+                                </program>
+                            </programs>
+                        </configuration>
                         <executions>
                             <execution>
                                 <phase>package</phase>
                                 <goals>
-                                    <goal>copy-dependencies</goal>
+                                    <goal>assemble</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>com.stratio.mojo.unix</groupId>
+                        <artifactId>unix-maven-plugin</artifactId>
+                        <version>1.1.6</version>
+                        <extensions>true</extensions>
+                        <inherited>false</inherited>
+                        <configuration>
+                            <outputFileName>stratio-sqoop-server</outputFileName>
+                            <contact>
+                                <![CDATA[Stratio Sqoop<sqoop@stratio.com>]]>
+                            </contact>
+                            <contactEmail>sqoop@stratio.com</contactEmail>
+                            <deb>
+                                <section>devel</section>
+                            </deb>
+                            <rpm>
+                                <group>stratio</group>
+                                <requires>bash</requires>
+                            </rpm>
+                            <name>Sqoop Shell</name>
+                            <excludeDirectoryAttributes>
+                                <dir>/etc</dir>
+                                <dir>/etc/init.d</dir>
+                                <dir>/etc/default</dir>
+                                <dir>/var</dir>
+                                <dir>/opt</dir>
+                                <dir>/usr</dir>
+                                <dir>/bin</dir>
+                            </excludeDirectoryAttributes>
+                            <assembly>
+                                <mkdirs>
+                                    <path>/opt/sds/sqoop-server</path>
+                                    <attributes>
+                                        <user>stratio</user>
+                                        <group>stratio</group>
+                                    </attributes>
+                                </mkdirs>
+                                <mkdirs>
+                                    <path>/var/run/sds</path>
+                                    <attributes>
+                                        <user>stratio</user>
+                                        <group>stratio</group>
+                                    </attributes>
+                                </mkdirs>
+                                <copyDirectory>
+                                    <from>target/appassembler/bin</from>
+                                    <to>/opt/sds/sqoop-server/bin</to>
+                                </copyDirectory>
+                                <copyDirectory>
+                                    <from>target/appassembler/repo</from>
+                                    <to>/opt/sds/sqoop-server/repo</to>
+                                </copyDirectory>
+                                <copyDirectory>
+                                    <from>target/appassembler/config/</from>
+                                    <to>/opt/sds/sqoop-server/config</to>
+                                </copyDirectory>
+                            </assembly>
+                            <defaults>
+                                <directoryAttributes>
+                                    <mode>0775</mode>
+                                </directoryAttributes>
+                                <fileAttributes>
+                                    <mode>0644</mode>
+                                </fileAttributes>
+                            </defaults>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>deb</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>package-deb</goal>
                                 </goals>
                                 <configuration>
-                                    <includeScope>runtime</includeScope>
-                                    <excludeScope>test</excludeScope>
-                                    <outputDirectory>${project.build.directory}/lib</outputDirectory>
+                                    <architecture>all</architecture>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>rpm</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>package-rpm</goal>
+                                </goals>
+                                <configuration>
+                                    <architecture>noarch</architecture>
                                 </configuration>
                             </execution>
                         </executions>
@@ -195,5 +293,4 @@ limitations under the License.
             </build>
         </profile>
     </profiles>
-
 </project>
