--- a/repository/pom.xml
+++ b/repository/pom.xml
@@ -22,7 +22,7 @@ limitations under the License.
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.apache</groupId>
+    <groupId>com.stratio.sqoop</groupId>
     <artifactId>sqoop</artifactId>
     <version>2.0.0-SNAPSHOT</version>
   </parent>
