--- a/pom.xml
+++ b/pom.xml
@@ -511,16 +511,19 @@ limitations under the License.
         <groupId>org.apache.spark</groupId>
         <artifactId>spark-yarn_${scala.minor.version}</artifactId>
         <version>${spark.version}</version>
+        <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>org.apache.spark</groupId>
         <artifactId>spark-streaming_${scala.minor.version}</artifactId>
         <version>${spark.version}</version>
+        <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>org.apache.spark</groupId>
         <artifactId>spark-streaming-kafka_${scala.minor.version}</artifactId>
         <version>${spark.version}</version>
+        <scope>provided</scope>
       </dependency>
    </dependencies>
 
@@ -558,8 +561,8 @@ limitations under the License.
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.3</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+          <source>1.7</source>
+          <target>1.7</target>
         </configuration>
       </plugin>
     </plugins>
@@ -570,7 +573,6 @@ limitations under the License.
           <artifactId>maven-jar-plugin</artifactId>
           <version>2.3.2</version>
         </plugin>
-
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
