--- a/execution/mapreduce/src/main/resources/META-INF/log4j.properties
+++ b/execution/mapreduce/src/main/resources/META-INF/log4j.properties
@@ -14,7 +14,7 @@
 # limitations under the License.
 
 # Set root logger level to INFO and its only appender to A1.
-log4j.logger.org.apache.sqoop=INFO, A1
+log4j.logger.org.apache.sqoop=${sqoop.mr.loglevel}, A1
 
 # A1 is set to be a ConsoleAppender.
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
