--- a/ivy/libraries.properties
+++ b/ivy/libraries.properties
@@ -18,7 +18,7 @@
 # This properties file lists the versions of the various artifacts we use.
 # It drives ivy and the generation of a maven POM
 
-avro.version=1.8.0-SNAPSHOT
+avro.version=1.8.0
 
 kite-data.version=1.0.0
 
