--- a/test/pom.xml
+++ b/test/pom.xml
@@ -218,6 +218,21 @@ limitations under the License.
             </configuration>
           </execution>
           <execution>
+            <id>hive-test</id>
+            <goals>
+              <goal>test</goal>
+            </goals>
+            <phase>integration-test</phase>
+            <configuration>
+              <suiteXmlFiles>
+                <suiteXmlFile>src/test/resources/hive-tests-suite.xml</suiteXmlFile>
+              </suiteXmlFiles>
+              <properties>
+                <suitename>hive-tests</suitename>
+              </properties>
+            </configuration>
+          </execution>
+          <execution>
             <id>new-integration-test</id>
             <goals>
               <goal>test</goal>
