SQOOP-2788: Sqoop2: Parquet support for HdfsConnector
(Abraham Fine via Jarek Jarcec Cecho)

--- a/common/src/main/resources/org.apache.sqoop.connector-classloader.properties
+++ b/common/src/main/resources/org.apache.sqoop.connector-classloader.properties
@@ -52,6 +52,8 @@ system.classes.default=java.,\
   org.apache.log4j.,\
   org.apache.sqoop.,\
   -org.apache.sqoop.connector.,\
+  org.apache.avro.,\
+  org.codehaus.jackson.,\
   org.xerial.snappy.,\
   sqoop.properties,\
   sqoop_bootstrap.properties
