SQOOP-2832: Sqoop2: Precommit: Create log files for individual tests  (Jarek Jarcec Cecho via Colin Ma)

--- a/test/pom.xml
+++ b/test/pom.xml
@@ -209,6 +209,7 @@ limitations under the License.
           </excludes>
           <systemPropertyVariables>
             <sqoop.integration.tmpdir>${project.build.directory}</sqoop.integration.tmpdir>
+            <sqoop.integration.log>${project.build.directory}/surefire-reports</sqoop.integration.log>
           </systemPropertyVariables>
         </configuration>
         <executions>
