SQOOP-2852: Sqoop2: Revert and re-commit SQOOP-2843: Sqoop2: Enable SSL/TLS for API calls
* Revert "SQOOP-2843: Sqoop2: Enable SSL/TLS for API calls"
* This reverts commit 96f3d9c195c78c1f315a61f7c84aa095a041f72b.

--- a/test/pom.xml
+++ b/test/pom.xml
@@ -274,17 +274,17 @@ limitations under the License.
             </configuration>
           </execution>
           <execution>
-            <id>server-properties-test</id>
+            <id>connector-loading-test</id>
             <goals>
               <goal>test</goal>
             </goals>
             <phase>integration-test</phase>
             <configuration>
               <suiteXmlFiles>
-                <suiteXmlFile>src/test/resources/server-properties-tests-suite.xml</suiteXmlFile>
+                <suiteXmlFile>src/test/resources/connector-loading-tests-suite.xml</suiteXmlFile>
               </suiteXmlFiles>
               <properties>
-                <suitename>server-properties-tests</suitename>
+                <suitename>connector-loading-tests</suitename>
               </properties>
             </configuration>
           </execution>
