SQOOP-2866: Sqoop2: Add Abe Fine to committer list in our pom file
(Jarek Jarcec Cecho via Abraham Fine)

--- a/pom.xml
+++ b/pom.xml
@@ -929,6 +929,14 @@ limitations under the License.
       </roles>
     </developer>
     <developer>
+      <id>afine</id>
+      <name>Abraham Fine</name>
+      <organization>Cloudera</organization>
+      <roles>
+        <role>committer</role>
+      </roles>
+    </developer>
+    <developer>
       <id>ahmed</id>
       <name>Ahmed Radwan</name>
       <organization>Apple</organization>
